--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,12 @@
         "symfony/yaml": "7.1.*"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.61"
+        "dama/doctrine-test-bundle": "^8.2",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "7.1.*",
+        "symfony/css-selector": "7.1.*",
+        "symfony/maker-bundle": "^1.61",
+        "symfony/phpunit-bridge": "^7.1"
     },
     "config": {
         "allow-plugins": {
