--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -14,6 +14,7 @@ composer_version: "2"
 web_environment:
     - DATABASE_URL=postgresql://db:db@db:5432/db
 default_container_timeout: "240"
+host_db_port: "54699"
 
 # Key features of DDEV's config.yaml:
 
